Fixed overflow not showing on toggle div and made it easier to run test page

--- a/web/src/main/resources/web/css/logos.css
+++ b/web/src/main/resources/web/css/logos.css
@@ -245,3 +245,7 @@
 	background-image: url("https://symbols.getvecta.com/stencil_82/107_gwt-project-icon.fc9159e9c3.svg");
 }
 
+.white-rabbit-logo::before {
+	background-image: url("https://white-rabbit.web.cern.ch/images/WRlogo-original.jpg");
+}
+
